Add endpoint for CM Logs
